fix gallery 'bug' + fix google map on iphone media query

--- a/src/section/Section.scss
+++ b/src/section/Section.scss
@@ -162,8 +162,13 @@ section {
             margin: 0.5rem 0;
             text-align: center;
           }
-          & iframe {
+          & .google-mapLocation {
             align-self: center;
+            border: 0.1rem solid #393939;
+            width: 20rem;
+            height: 20rem;
+            margin: 0;
+            padding: 0;
           }
         }
       }
